--- a/Projects/Tweeter/style.css
+++ b/Projects/Tweeter/style.css
@@ -18,6 +18,7 @@ body{
 #header{
     grid-area: h;
     color: #3498db;
+
 }
 
 #input{
@@ -47,6 +48,9 @@ body{
     margin: 10px;
     border-radius: 5px;
     padding: 10px;
+    font-size: 2vw;
+    color:beige;
+    background-color: #2980b9
 }
 
 #post:active{
@@ -58,14 +62,22 @@ body{
 }
 
 .comments{
+    display: grid;
     margin-left: 10px;
     margin: 10px;
-    
+    padding-right: 30px;
+    box-shadow: 2px 2px 7px;
+    background-color: lightgreen;
+    justify-self: start;
+    align-self:start;
+    width: fit-content;
+    height: fit-content;
 }
 #comments1{
     margin-left: 10px;
     border-radius: 5px;
     padding: 10px;
+    
 }
 .delete{
     cursor: pointer;
@@ -80,13 +92,14 @@ body{
 .delete-comment{
     cursor: pointer;
     color: #e74c3c;
+    display: inline;
 }
 
 .inputComment{
-     
     padding: 10px;
     font-size: 1.5vw;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 .postComment{
     padding: 10px;
@@ -100,4 +113,11 @@ body{
     margin-left: 45px;
     justify-content: center;
     font-size: 2.5vw;
+}
+#title{
+    display: grid;
+    align-self: center;
+    justify-self: center;
+    margin-left: 300px;
+    font-size: 3vw;
 }
